<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Weatherist</string>
    <string name="title_activity_main">Weatherist</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view_in_map">View in Map</string>

    <string name="title_activity_detail">Weather Info</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_key">location</string>
    <string name="pref_location_title">Weather Location</string>
    <string name="pref_location_default">Beirut</string>

    <string name="pref_unit_key">unit</string>
    <string name="pref_unit_title">Temperature Unit</string>
    <string name="pref_unit_metric">metric</string>

    <string-array name="pref_unit_list_entries">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="pref_unit_list_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
</resources>
